--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.gr.java_conf.kazuki.sixcat">
+    package="jp.gr.java_conf.kazuki.sixcat" >
 
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
-
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity"
+            android:label="@string/title_profile_list" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileDetailActivity"
+            android:label="@string/title_profile_detail"
+            android:parentActivityName="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity" />
+        </activity>
     </application>
 
 </manifest>
