--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="jp.gr.java_conf.kazuki.sixcat" >
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileDetailActivity"
+            android:name=".ProfileListActivity"
+            android:label="@string/title_profile_list" >
+        </activity>
+        <activity
+            android:name=".ProfileDetailActivity"
             android:label="@string/title_profile_detail"
-            android:parentActivityName="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity" >
+            android:parentActivityName=".ProfileListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="jp.gr.java_conf.kazuki.sixcat.ProfileListActivity" />
         </activity>
         <activity
-            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileRegisterActivity"
+            android:name=".ProfileRegisterActivity"
             android:label="@string/title_activity_profile_register" >
         </activity>
         <activity
-            android:name="jp.gr.java_conf.kazuki.sixcat.ProfileEditActivity"
+            android:name=".ProfileEditActivity"
             android:label="@string/title_activity_profile_edit" >
         </activity>
     </application>
